@@ -29,7 +29,8 @@ mysql << OK_ALL_DONE
 use bugs;
 create table products (
 product tinytext,
-description mediumtext
+description mediumtext,
+milestoneurl tinytext not null
 );
 
 
@@ -38,6 +39,6 @@ insert into products (product, description) values ("CCK", 'For bugs about the <
 insert into products (product, description) values ("Directory", 'For bugs about the <a href="http://www.mozilla.org/directory">Directory (LDAP)</a> project');
 insert into products (product, description) values ("MailNews", 'For bugs about the <a href="http://www.mozilla.org/mailnews/index.html">Mozilla Mail/News</a> project');
 insert into products (product, description) values ("Mozilla", "For bugs about the Mozilla web browser");
-insert into products (product, description) values ("NGLayout", 'For bugs about the <a href="http://www.mozilla.org/newlayout/">New Layout</a> project');
+insert into products (product, description, milestoneurl) values ("NGLayout", 'For bugs about the <a href="http://www.mozilla.org/newlayout/">New Layout</a> project', 'http://www.mozilla.org/projects/seamonkey/milestones');
 insert into products (product, description) values ("Webtools", 'For bugs about the web-based tools that mozilla.org uses.  This include Bugzilla (problems you are having with this bug system itself), <a href="http://www.mozilla.org/bonsai.html">Bonsai</a>, and <a href="http://www.mozilla.org/tinderbox.html">Tinderbox</a>.');
 
