@@ -1,0 +1,10 @@
+<html> <head>
+<title>No target milestones.</title>
+</head>
+
+<body>
+<h1>No target milestones.</h1>
+
+No target milestones have been defined for this product.  You can set
+the Target Milestone field to things, but there is not currently any
+agreed definition of what the milestones are.
